--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,27 @@
-<header class="site-header">
+	<header role="banner" class="site-header" style="background:white; padding-top:0px; padding-bottom:10px">
+		<div class="row" style="padding-top:30px">
+			<div class="eight columns">
+				<img src="http://blog.gemba.io/img/Gemba-icon-200.png" alt="Gemba icon: ?" style="float:left; margin-right:30px; margin-left:21px" width="200" height="200" />
+				<h1 style="text-align:left; color:#4ea3b5; padding-top:18px; padding-bottom:20px; font-size:60px; font-family:inherit">Gemba</h1>
+				<h2 style="text-align:left; color:#4ea3b5; padding-top:0px; font-size:30px">Drag and Drop Git<br />for Designers</h2>
+			</div>
 
-  <div class="wrapper">
+			<div class="four columns" id="mc_embed_signup">
+				<div style="padding:0.5em; padding-top:2.5em">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+					<p style="color:#666; font-size:0.9rem">World-class <strong>designer developer teams</strong> are already using Gemba. Join us:</p>
 
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a>
-
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
-
-  </div>
-
-</header>
+					<form role="form" action="http://app.us4.list-manage1.com/subscribe/post?u=5d34b5747a626d1665f586dd0&amp;id=c3bce2b566" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+		                <input class="medium-input-side" type="email" placeholder="Your e-mail" autocomplete="off" name="EMAIL" id="mce-EMAIL" />
+		                <input type="submit" class="medium-btn-side" style="" value="Get Beta" name="subscribe" id="mc-embedded-subscribe" />
+		                <div class="catch-errors"></div>
+		                <div id="mce-responses" class="clear">
+							<div class="response" id="mce-error-response" style="display:none"></div>
+							<div class="response" id="mce-success-response" style="display:none"></div>
+						</div>
+						<div style="position: absolute; left: -5000px;"><input type="text" name="b_5d34b5747a626d1665f586dd0_c3bce2b566" value=""></div>
+			        </form>
+				</div>
+			</div>
+		</div>
+	</header>
