--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,9 @@
 	<header role="banner" class="site-header" style="background:white; padding-top:0px; padding-bottom:10px">
-		<div class="row" style="padding-top:30px">
+		<div class="row" style="padding-top:20px; padding-bottom:10px">
 			<div class="eight columns">
-				<img src="/img/Gemba-icon-200.png" alt="Gemba icon: ?" style="float:left; margin-right:30px; margin-left:21px" width="200" height="200" />
-				<h1 style="text-align:left; color:#4ea3b5; padding-top:18px; padding-bottom:20px; font-size:60px; font-family:inherit">Gemba</h1>
-				<h2 style="text-align:left; color:#4ea3b5; padding-top:0px; font-size:30px">Drag and Drop Git<br />for Designers</h2>
-			</div>
-
-			<div class="four columns" id="mc_embed_signup">
-				<div style="padding:0.5em; padding-top:2.5em">
-
-					<p style="color:#666; font-size:0.9rem">World-class <strong>designer developer teams</strong> are already using Gemba. Join us:</p>
-
-					<form role="form" action="http://app.us4.list-manage1.com/subscribe/post?u=5d34b5747a626d1665f586dd0&amp;id=c3bce2b566" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
-		                <input class="medium-input-side" type="email" placeholder="Your e-mail" autocomplete="off" name="EMAIL" id="mce-EMAIL" />
-		                <input type="submit" class="medium-btn-side" style="" value="Get Beta" name="subscribe" id="mc-embedded-subscribe" />
-		                <div class="catch-errors"></div>
-		                <div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div>
-						<div style="position: absolute; left: -5000px;"><input type="text" name="b_5d34b5747a626d1665f586dd0_c3bce2b566" value=""></div>
-			        </form>
-				</div>
+				<img src="/img/Gemba-icon-200.png" alt="Gemba for Mac app icon" style="float:left; margin-right:30px; margin-left:0px" width="100" height="100" />
+				<h1 style="text-align:left; color:#4ea3b5; padding-top:18px; padding-bottom:5px; font-size:30px; font-family:inherit">Gemba</h1>
+				<h2 style="text-align:left; color:#4ea3b5; padding-top:0px; font-size:20px">Drag and Drop Git for Designers</h2>
 			</div>
 		</div>
 	</header>
