--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,3 +13,22 @@ layout: default
   </article>
 
 </div>
+
+<!-- START: Mini signup -->
+<div class="four columns" id="mc_embed_signup" style="margin-left:0; margin-top:0.5em">
+	<div style="padding:1em 0 0 0; border-top:solid 1px #ccc">
+
+		<p style="color:#666; font-size:0.9rem">Join world-class <strong>designer–developer teams</strong> in using Gemba:</p>
+
+		<form role="form" action="http://app.us4.list-manage1.com/subscribe/post?u=5d34b5747a626d1665f586dd0&amp;id=c3bce2b566" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+            <input class="medium-input-side" type="email" placeholder="" autocomplete="off" name="EMAIL" id="mce-EMAIL" />
+            <input type="submit" class="medium-btn-side" style="Your e-mail address" value="Get Beta" name="subscribe" id="mc-embedded-subscribe" />
+            <div class="catch-errors"></div>
+            <div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>
+			<div style="position: absolute; left: -5000px;"><input type="text" name="b_5d34b5747a626d1665f586dd0_c3bce2b566" value=""></div>
+        </form>
+	</div>
+</div>
