--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 	<footer role="contentinfo" class="site-footer">
 		<div class="row">
 			<div class="seven columns">
-				<p style="color:white">&copy; 2014&#8211;2015 <a href="http://yangmeyer.de/" style="color:inherit">Yang Meyer</a>. Made in Stockholm and Frankfurt.</p>
+				<p style="color:white">&copy; 2014&#8211;2015 <a href="http://yangmeyer.de/" style="color:inherit">Yang Meyer</a> //
+				  <span class="rss-subscribe">Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></span>
+				</p>
 			</div>
 			<div class="five columns">
 				<p style="text-align:right">
