--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,9 @@
 	<header role="banner" class="site-header" style="background:white; padding-top:0px; padding-bottom:10px">
 		<div class="row" style="padding-top:20px; padding-bottom:10px">
-			<div class="eight columns">
-				<a href="http://www.gemba.io">
-					<img src="/img/Gemba-icon-200.png" alt="Gemba for Mac app icon" style="float:left; margin-right:30px; margin-left:0px" width="100" height="100" />
-				</a>
-				<h1 style="text-align:left; color:#4ea3b5; padding-top:18px; padding-bottom:5px; font-size:30px; font-family:inherit">Gemba</h1>
-				<h2 style="text-align:left; color:#4ea3b5; padding-top:0px; font-size:20px">Drag and Drop Git for Designers</h2>
+			<div class="twelve columns horizontaly-centered-content pull-left-block">
+				<img src="img/Gemba-icon-200.png" class="horizontaly-centered pull-left-block" alt="Gemba icon: ?" style=" margin-right:30px; margin-left:30px" width="200" height="200" />
+				<h1 class="horizontaly-centered pull-left-text" style="color:#4ea3b5; padding-top:18px; padding-bottom:20px; font-size:60px; font-family:inherit">Gemba</h1>
+				<h2 class="horizontaly-centered pull-left-text" style="color:#4ea3b5; padding-top:0px; font-size:30px">Drag and Drop Git<br />for Designers</h2>
 			</div>
 		</div>
 	</header>
