--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 
 		      <div class="trigger">
 		          <a class="page-link" href="http://gemba.io" style="color:#e86e28; font-weight:bold">About Gemba</a>
-		          <a class="page-link" href="{{ site.base_url }}" style="color:#e86e28; font-weight:bold">Blog</a>
+		          <a class="page-link" href="http://blog.gemba.io" style="color:#e86e28; font-weight:bold">Blog</a>
 		      </div>
 		    </nav>
 		</div>
