--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -485,7 +485,7 @@ ul, ol {
   margin-bottom: 0.273em; }
 
 ul {
-  list-style: none outside; }
+  list-style: disc outside; }
 
 ol {
   list-style: decimal;
