--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -416,6 +416,9 @@ h1 {
 h2 {
   font-size: 42px;
   font-size: 2.625rem; }
+.post-list h2 {
+  font-size: 18px;
+  font-size: 1.125rem; }
 
 h3 {
   font-size: 30px;
