--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
 			<div class="row" style="padding:20px 0 0 0">
 				<div class="twelve columns horizontaly-centered-content pull-left-block">
 					<a href="http://gemba.io"><img src="/img/Gemba-icon-200.png" class="horizontaly-centered pull-left-block" alt="Gemba icon: ?" style=" margin-right:30px; margin-left:-13px" width="200" height="200" /></a>
-					<h1 class="horizontaly-centered pull-left-text" style="color:#4ea3b5; padding-top:40px; padding-bottom:20px; font-size:60px; font-family:inherit">Gemba</h1>
-					<h2 class="horizontaly-centered pull-left-text" style="color:#4ea3b5; padding-top:0px; font-size:30px">Drag and Drop Git for Designers</h2>
+					<h1 class="horizontaly-centered pull-left-text" style="color:#4ea3b5; padding-top:20px; padding-bottom:20px; font-size:60px; font-family:inherit">Gemba</h1>
+					<h2 class="horizontaly-centered pull-left-text" style="color:#4ea3b5; padding-top:0px; font-size:30px">Streamlined asset pipeline for designer–developer teams.</h2>
 				</div>
 			</div>
 
