Include CTA (which is now buy/download rather than signup).

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
+
+        {% include cta.html %}
+
       </div>
     </div>
 
