Revert to mailing list signup CTA.

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,18 +1,19 @@
-<div class="row" style="margin-left:0; margin-top:1.5em; padding-top:1em; border-top:solid 1px #ccc; padding-left:0; text-align:center">
+<!-- START: Mini signup -->
+<a name="signup"></a>
+<div class="four columns" id="mc_embed_signup" style="margin-left:0; margin-top:0.5em">
+  <div style="padding:1em 0 0 0; border-top:solid 1px #ccc">
+
     <p style="color:#666; font-size:0.9rem">Join world-class <strong>designer–developer teams</strong> in using Gemba:</p>
-</div>
-<div class="row">
-    <div class="three columns"></div>
-    <div class="three columns">
-      <p style="text-align:center">
-        <a href="https://pay.paddle.com/checkout/495337" class="bordered-button" style="width:100%; margin-top:0.5em; padding:0.5em 0.2em; line-height:1.5rem; background:#4ea3b5; border-radius:7px; color:white">Buy (39&nbsp;&euro;)</a>
-      </p>
-    </div>
-    <div class="three columns">
-      <p style="text-align:center">
-        <a href="download.html" class="bordered-button" style="width:100%; margin-top:0.5em; padding:0.5em 0.2em; line-height:1.5rem; background:#ff983a; border-radius:7px;">Free Trial</a><br />
-        <span style="font-size:0.8rem; color:#666"><a href="releases/0.9.8.html" style="color:black">Beta&nbsp;3</a> for OS&nbsp;X 10.10+</span>
-      </p>
-    </div>
-    <div class="three columns"></div>
+
+    <form role="form" action="http://app.us4.list-manage1.com/subscribe/post?u=5d34b5747a626d1665f586dd0&amp;id=c3bce2b566" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+            <input class="medium-input-side" type="email" placeholder="" autocomplete="off" name="EMAIL" id="mce-EMAIL" />
+            <input type="submit" class="medium-btn-side" style="Your e-mail address" value="Get Beta" name="subscribe" id="mc-embedded-subscribe" />
+            <div class="catch-errors"></div>
+            <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+      </div>
+      <div style="position: absolute; left: -5000px;"><input type="text" name="b_5d34b5747a626d1665f586dd0_c3bce2b566" value=""></div>
+        </form>
+  </div>
 </div>
