Improve signup CTA wording.

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,13 +1,14 @@
 <!-- START: Mini signup -->
 <a name="signup"></a>
-<div class="four columns" id="mc_embed_signup" style="margin-left:0; margin-top:0.5em">
-  <div style="padding:1em 0 0 0; border-top:solid 1px #ccc">
+<div id="mc_embed_signup" style="margin-left:0; margin-top:0.5em; color:#666">
+  <div style="display:inline-block; margin-top:1em; padding:1em 0 0 0; border-top:solid 0px #ccc; max-width:320px">
 
-    <p style="color:#666; font-size:0.9rem">Join world-class <strong>designer–developer teams</strong> in using Gemba:</p>
+    <p style="font-size:0.9rem">Take part in my <strong>indie journey</strong> of creating Gemba and <strong>improving designer–developer collaboration</strong> by joining my mailing list:</p>
 
     <form role="form" action="http://app.us4.list-manage1.com/subscribe/post?u=5d34b5747a626d1665f586dd0&amp;id=c3bce2b566" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
-            <input class="medium-input-side" type="email" placeholder="" autocomplete="off" name="EMAIL" id="mce-EMAIL" />
-            <input type="submit" class="medium-btn-side" style="Your e-mail address" value="Get Beta" name="subscribe" id="mc-embedded-subscribe" />
+            <input class="medium-input-side" type="email" placeholder="Your e-mail address" autocomplete="off" name="EMAIL" id="mce-EMAIL" />
+            <input type="submit" class="medium-btn-side" style="Your e-mail address" value="Join" name="subscribe" id="mc-embedded-subscribe" />
+            <p style="font-size:small; color:#999; text-align:center">Low volume, no spam.</p>
             <div class="catch-errors"></div>
             <div id="mce-responses" class="clear">
         <div class="response" id="mce-error-response" style="display:none"></div>
